--- a/services/order-service/Dockerfile
+++ b/services/order-service/Dockerfile
@@ -2,11 +2,18 @@ FROM python:3.11-slim
 
 WORKDIR /app
 
-COPY requirements.txt .
+COPY services/order-service/requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-COPY init_db.py .
-COPY app.py .
+# Copy proto files (from project root)
+COPY proto /app/proto
+
+# Compile proto files
+RUN python -m grpc_tools.protoc -I /app/proto --python_out=/app/proto --grpc_python_out=/app/proto /app/proto/user.proto /app/proto/product.proto
+
+COPY services/order-service/init_db.py .
+COPY services/order-service/app.py .
+COPY services/order-service/grpc_client.py .
 
 EXPOSE 5003
 
