--- a/services/user-service/Dockerfile
+++ b/services/user-service/Dockerfile
@@ -2,13 +2,23 @@ FROM python:3.11-slim
 
 WORKDIR /app
 
-COPY requirements.txt .
+COPY services/user-service/requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-COPY init_db.py .
-COPY app.py .
+# Copy proto files (from project root)
+COPY proto /app/proto
 
-EXPOSE 5001
+# Compile proto files
+RUN python -m grpc_tools.protoc -I /app/proto --python_out=/app/proto --grpc_python_out=/app/proto /app/proto/user.proto
 
-CMD ["python", "app.py"]
+COPY services/user-service/init_db.py .
+COPY services/user-service/app.py .
+COPY services/user-service/grpc_server.py .
+COPY services/user-service/start.sh .
+
+RUN chmod +x start.sh
+
+EXPOSE 5001 50051
+
+CMD ["./start.sh"]
 
